package com.crypto.app.domain;

public enum CryptoType {
    BITCOIN,
    ETHEREUM
}



