package com.crypto.app.domain;

public interface Identifiable {
    String getId();
}



