package com.crypto.app.domain;

public enum Priority {
    ECONOMIQUE,
    STANDARD,
    RAPIDE
}



