package com.crypto.app.domain;

public enum TransactionStatus {
    PENDING,
    CONFIRMED,
    REJECTED
}



